added audio generation code

--- a/notebooks/pdf-to-podcast.ipynb
+++ b/notebooks/pdf-to-podcast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "06422b6a",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/codespace/.python/current/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -18,7 +18,11 @@
    "source": [
     "import os\n",
     "from huggingface_hub import InferenceClient\n",
-    "from PyPDF2 import PdfReader"
+    "from PyPDF2 import PdfReader\n",
+    "from transformers import pipeline\n",
+    "from datasets import load_dataset\n",
+    "import torch\n",
+    "import soundfile as sf"
    ]
   },
   {
@@ -297,24 +301,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd09daed",
+   "execution_count": 21,
+   "id": "0d175a47",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cac2c509",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def generate_audio(podcast_script):\n",
+    "    embeddings_dataset = load_dataset(\"Matthijs/cmu-arctic-xvectors\", split=\"validation\")\n",
+    "\n",
+    "    speaker_embeddings = embeddings_dataset[7306][\"xvector\"]\n",
+    "    speaker_embeddings = torch.tensor(speaker_embeddings).unsqueeze(0)\n",
+    "    pipe = pipeline(\"text-to-speech\", model=\"microsoft/speecht5_tts\")\n",
+    "\n",
+    "    # limiting to first 600 words, due to the model limitation\n",
+    "    speech = pipe(podcast_script[:600], forward_params={\"speaker_embeddings\": speaker_embeddings})\n",
+    "\n",
+    "    return speech"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ad4f52f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "podcast_audio = generate_audio(final_podcast_script)\n",
+    "\n",
+    "out_audio_path = \"../audio\"\n",
+    "out_audio_file_name = in_file_name.split(\".\")[0] + \".wav\"\n",
+    "out_audio_folder_path = f\"{out_audio_path}/{out_audio_file_name}\"\n",
+    "\n",
+    "sf.write(out_audio_folder_path, podcast_audio[\"audio\"], samplerate=podcast_audio[\"sampling_rate\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78da3a96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27848a57",
    "metadata": {},
    "outputs": [],
    "source": []
